@@ -18385,13 +18385,14 @@
     {
       rtx mem, reg_ssp;
 
-      mem = gen_rtx_MEM (Pmode, plus_constant (Pmode, operands[0],
-					       3 * GET_MODE_SIZE (Pmode)));
-      reg_ssp = gen_reg_rtx (Pmode);
+      mem = gen_rtx_MEM (word_mode,
+			 plus_constant (ptr_mode, operands[0],
+					3 * GET_MODE_SIZE (ptr_mode)));
+      reg_ssp = gen_reg_rtx (word_mode);
       emit_insn (gen_rtx_SET (reg_ssp, const0_rtx));
-      emit_insn ((Pmode == SImode)
-		  ? gen_rdsspsi (reg_ssp, reg_ssp)
-		  : gen_rdsspdi (reg_ssp, reg_ssp));
+      emit_insn ((word_mode == SImode)
+		 ? gen_rdsspsi (reg_ssp, reg_ssp)
+		 : gen_rdsspdi (reg_ssp, reg_ssp));
       emit_move_insn (mem, reg_ssp);
     }
   DONE;
@@ -18433,18 +18434,18 @@
       /* Get the current shadow stack pointer.  The code below will check if
 	 SHSTK feature is enabled.  If it is not enabled the RDSSP instruction
 	 is a NOP.  */
-      reg_ssp = gen_reg_rtx (Pmode);
+      reg_ssp = gen_reg_rtx (word_mode);
       emit_insn (gen_rtx_SET (reg_ssp, const0_rtx));
-      emit_insn ((Pmode == SImode)
+      emit_insn ((word_mode == SImode)
 		 ? gen_rdsspsi (reg_ssp, reg_ssp)
 		 : gen_rdsspdi (reg_ssp, reg_ssp));
-      mem_buf = gen_rtx_MEM (Pmode, plus_constant (Pmode, operands[0],
-						   3 * GET_MODE_SIZE (Pmode)));
+      mem_buf = gen_rtx_MEM (word_mode,
+			     plus_constant (ptr_mode, operands[0],
+					    3 * GET_MODE_SIZE (ptr_mode)));
 
       /* Compare through substraction the saved and the current ssp to decide
 	 if ssp has to be adjusted.  */
-      reg_adj = gen_reg_rtx (Pmode);
-      tmp = gen_rtx_SET (reg_adj, gen_rtx_MINUS (Pmode, reg_ssp, mem_buf));
+      tmp = gen_rtx_SET (reg_ssp, gen_rtx_MINUS (word_mode, reg_ssp, mem_buf));
       clob = gen_rtx_CLOBBER (VOIDmode, gen_rtx_REG (CCmode, FLAGS_REG));
       tmp = gen_rtx_PARALLEL (VOIDmode, gen_rtvec (2, tmp, clob));
       emit_insn (tmp);
@@ -18460,9 +18461,10 @@
       JUMP_LABEL (jump) = noadj_label;
 
       /* Compute the numebr of frames to adjust.  */
+      reg_adj = gen_rtx_SUBREG (Pmode, reg_ssp, 0);
       tmp = gen_rtx_SET (reg_adj,
 			 gen_rtx_LSHIFTRT (Pmode, negate_rtx (Pmode, reg_adj),
-					   GEN_INT ((Pmode == SImode)
+					   GEN_INT ((word_mode == SImode)
 						    ? 2
 						    : 3)));
       clob = gen_rtx_CLOBBER (VOIDmode, gen_rtx_REG (CCmode, FLAGS_REG));
@@ -18487,9 +18489,9 @@
       emit_label (loop_label);
       LABEL_NUSES (loop_label) = 1;
 
-      emit_insn ((Pmode == SImode)
-		 ? gen_incsspsi (reg_adj)
-		 : gen_incsspdi (reg_adj));
+      emit_insn ((word_mode == SImode)
+		 ? gen_incsspsi (reg_ssp)
+		 : gen_incsspdi (reg_ssp));
       tmp = gen_rtx_SET (reg_adj, gen_rtx_MINUS (Pmode,
 						 reg_adj,
 						 GEN_INT (255)));
@@ -18511,9 +18513,9 @@
 
       emit_label (inc_label);
       LABEL_NUSES (inc_label) = 1;
-      emit_insn ((Pmode == SImode)
-		 ? gen_incsspsi (reg_adj)
-		 : gen_incsspdi (reg_adj));
+      emit_insn ((word_mode == SImode)
+		 ? gen_incsspsi (reg_ssp)
+		 : gen_incsspdi (reg_ssp));
 
       emit_label (noadj_label);
       LABEL_NUSES (noadj_label) = 1;
